# mirA

./: .gitignore  CMakeLists.txt  README.md  notes.md  start_mirA.sh
panel/: panel_workspace.cpp
src/: compositor.cpp  compositor.h  keybindings.cpp  keybindings.h  main.cpp  tiling_window_manager.cpp  tiling_window_manager.h  tiling_window_manager_policy.cpp  tiling_window_manager_policy.h  window_manager.h
src/panel/: panel_workspace.cpp
wallpaper/: wallpaper.cpp
